--- a/src/app/advanced/advanced.component.html
+++ b/src/app/advanced/advanced.component.html
@@ -5,11 +5,16 @@
             <div class="row align-items-center">
 
                 <div class="col-12">
-
-                    <div></div>
+                        <div [@spoonAnimation]="spoons.length">
+                        <ul *ngFor="let spoon of spoons">
+                            <li class="spoon-block d-flex justify-content-center">{{spoon.name}}</li>
+                        </ul>
+                        </div>
+                    <app-fadeblock></app-fadeblock>
 
                 </div>
 
             </div>
-
+            <hr/>
+            <button class="btn btn-primary" (click)="showSpoons()">Show Spoons</button>
         </div>
