--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -46,8 +46,6 @@
   </div>
 
 </nav>
-<div class="page">
-
-    <router-outlet></router-outlet>
-
+<div class="page" [@routerAnimations]="prepareRouteTransition(outlet)">
+    <router-outlet #outlet="outlet"></router-outlet>
 </div>
