--- a/src/app/contained/contained.component.html
+++ b/src/app/contained/contained.component.html
@@ -4,8 +4,10 @@
 
           <div class="row">
 
-              <div class="col-12"></div>
-
+              <div class="col-12">
+                  <app-mouse></app-mouse>
+              </div>
+                
           </div>
 
       </div>
